[gd_scene load_steps=12 format=3 uid="uid://nfj5ltcydj3b"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EndOfPhaseContainer/endof_phase_container.gd" id="1_wntkl"]
[ext_resource type="Shader" path="res://Shader/Reveal/reveal.gdshader" id="2_y3442"]
[ext_resource type="PackedScene" uid="uid://b8hw5jenpkiw8" path="res://UI/Buttons/TextBtn/TextBtn.tscn" id="3_oji45"]
[ext_resource type="PackedScene" uid="uid://ceiftayudibcw" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EndOfPhaseContainer/parts/BaseSummary/BaseSummary.tscn" id="4_desha"]
[ext_resource type="PackedScene" uid="uid://cegeq1hmwtsev" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/EndOfPhaseContainer/parts/ResearcherSummary/ResearcherSummary.tscn" id="5_xgssl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a3cap"]
shader = ExtResource("2_y3442")
shader_parameter/percentage = 1.0
shader_parameter/angle_degrees = 0.0
shader_parameter/line_width = 0.02
shader_parameter/line_color = Color(0, 0.964706, 0.278431, 1)
shader_parameter/laser_color = Color(1, 0, 0, 1)
shader_parameter/glow_width = 0.05
shader_parameter/trail_fade = 0.06

[sub_resource type="ViewportTexture" id="ViewportTexture_jjrny"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8j3v"]
bg_color = Color(0, 0.254902, 0.0823529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0yhh"]
bg_color = Color(0.05, 0.05, 0.05, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_060a7"]
color = Color(0, 0.529412, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5nmj"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[node name="EndofPhaseContainer" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wntkl")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_a3cap")
layout_mode = 2
texture = SubResource("ViewportTexture_jjrny")
stretch_mode = 2

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(720, 505)

[node name="PanelContainer" type="PanelContainer" parent="SubViewport"]
offset_right = 720.0
offset_bottom = 346.0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_b8j3v")

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BASE / RESEARCHER SUMMARY
"

[node name="TextBtn" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_oji45")]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d0yhh")
panel_color = Color(0.05, 0.05, 0.05, 0)
title = "NEXT DAY"

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_060a7")

[node name="BaseSummary" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("4_desha")]
visible = false
layout_mode = 2

[node name="ResearcherSummary" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_xgssl")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_060a7")

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="NextBtn" parent="SubViewport/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_oji45")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c5nmj")
title = "NEXT"

[connection signal="item_rect_changed" from="SubViewport/PanelContainer" to="." method="_on_subviewport_child_changed"]
